--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,4 +1,3 @@
-{{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
-<a href='{{=URL("projects")}}'>Criar projeto</a>
+<a href='{{=URL("all_projects")}}'>{{=T('Projects')}}</a>
