--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,3 +1,3 @@
 {{extend 'layout.html'}}
 
-<a href='{{=URL("all_projects")}}'>{{=T('Projects')}}</a>
+<a href='{{=URL("product_backlog")}}'>{{=T('Projects')}}</a>
