--- a/views/default/project.html
+++ b/views/default/project.html
@@ -20,60 +20,39 @@
 
 <button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
 <div id="stories">
-<!-- 	<ul class="stories_container">
-		<div class="stories_header">
-			<a href="#" class="editable-click editable-empty story_card new_story editable" data-type="text" data-placeholder="Click para escrever" data-pk="1">Click para escrever</a>
-			<button class="btn expand_story pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
-			<button class="btn delete_story pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-			<button class="btn comment_story pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
-			<select class="span1 pull-right" name="size"  id="size">
-	            <option value="P" selected>P</option>
-	            <option value="M">M</option>
-	            <option value="G">G</option>
-	            <option value="GG">GG</option>
-	        </select>
-			<input class="span1 pull-right" type="text" placeholder="?">
-		</div>
-		<div class="stories_footer">
-			<footer id="story_footer">
-				<button class="btn btn-primary create_definition_ready">{{=T('Create Definition Of Ready')}}</button>
-			</footer>
-		</div>
-	</ul> -->
-</div>
-
-<br>
-<br>
-
-{{if "stories" in globals():}}
-	<h2>{{=T('Stories Project')}}</h2>
-	<table class="table table-hover" data-provides="rowlink">
-		<thead>
-			<tr>
-				<th><strong>{{=T('Title')}}</strong></th>
-				<th><strong>{{=T('Benefit')}}</strong></th>
-				<th><strong>{{=T('Story points')}}</strong></th>
-			</tr>
-		</thead>
-		<tbody>
-
-	{{for i in stories:}}
-		<tr>
-			<td>{{=i.title}}</td>
-			<td>{{=i.benefit}}</td>
-			<td>{{=i.story_points}}</td>
-		</tr>	
+	{{if "stories" in globals():}}
+		{{selects="P M G GG".split()}}
+		{{for i in stories:}}
+		<ul class="stories_container">
+			<div class="stories_header">
+				<a href="#" class="editable-click editable-empty story_card new_story editable" data-type="text" data-id="{{=i.id}}" data-placeholder="Click para escrever">{{=i.title}}</a>
+				<button class="btn expand_story pull-right" alt="Expand" title="Expand">
+					<i class="icon-chevron-down"></i></button>
+				<button class="btn delete_story pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+				<select class="span1 pull-right benefit" name="size" id="size">
+				{{for size in selects:}}
+					{{if size == i.benefit:}}
+						<option value="{{=size}}" selected>{{=size}}</option>
+					{{else:}}
+						<option value="{{=size}}">{{=size}}</option>
+					{{pass}}
+				{{pass}}
+				</select>
+				<input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=i.story_points}}">
+				<button class="btn btn-primary create_definition_ready pull-right">{{=T('DR')}}</button>
+			</div>
+			<div class="stories_footer">
+				
+			</div>
+		</ul>
+		{{pass}}
 	{{pass}}
-		</tbody>
-	</table>
-
-	<br>
-	<br>
-{{pass}}
+</div>
 
 <script>
 	var urlStory = "{{=URL('create_story.json')}}",
-		botonDefinitionReady = '{{=T("DR")}}';
+		urlUpdateStory = "{{=URL('update_story.json')}}",
+		botonDefinitionReady = '{{=T("DR")}}',
 		projectID = '{{=project.id}}';
 </script>
 
