--- a/views/default/project.html
+++ b/views/default/project.html
@@ -1,5 +1,13 @@
 {{extend 'default/layout.html'}}
 
+<script>
+	var urlStory = "{{=URL('create_story.json')}}",
+		urlDefinitionReady = "{{=URL('create_definition_ready.json')}}",
+		urlUpdateBacklogItens = "{{=URL('update_backlog_itens.json')}}",
+		botonDefinitionReady = '{{=T("DR")}}',
+		projectID = '{{=project.id}}';
+</script>
+
 <h2>Projeto</h2>
 <table class="table table-hover" data-provides="rowlink">
 	<thead>
@@ -22,38 +30,43 @@
 <div id="stories">
 	{{if "stories" in globals():}}
 		{{selects="P M G GG".split()}}
-		{{for i in stories:}}
+		{{for story in stories:}}
 		<ul class="stories_container">
 			<div class="stories_header">
-				<a href="#" class="editable-click editable-empty story_card new_story editable" data-type="text" data-id="{{=i.id}}" data-placeholder="Click para escrever">{{=i.title}}</a>
+				<a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('update_backlog_itens.json')}}" data-name="stories">{{=story.title}}</a>
 				<button class="btn expand_story pull-right" alt="Expand" title="Expand">
 					<i class="icon-chevron-down"></i></button>
 				<button class="btn delete_story pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
 				<select class="span1 pull-right benefit" name="size" id="size">
 				{{for size in selects:}}
-					{{if size == i.benefit:}}
+					{{if size == story.benefit:}}
 						<option value="{{=size}}" selected>{{=size}}</option>
 					{{else:}}
 						<option value="{{=size}}">{{=size}}</option>
 					{{pass}}
 				{{pass}}
 				</select>
-				<input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=i.story_points}}">
+				<input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
 				<button class="btn btn-primary create_definition_ready pull-right">{{=T('DR')}}</button>
 			</div>
 			<div class="stories_footer">
-				
+				{{count = 0}}
+				{{for df in definition_ready[story.id]:}}
+					{{if definition_ready[story.id][count].story_id == story.id:}}
+					<li>
+						<a href="#" class="editable-click new_definition_ready editable" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('update_backlog_itens.json')}}" data-name="definition_ready">{{=definition_ready[story.id][count].title}}</a>
+						<button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
+						<button class="btn delete_definition_ready pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+						<button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+						<button class="btn plus_card pull-right" alt="Create Card" title="Create Card"><i class="icon-plus-sign"></i></button>
+					</li>
+					{{count += 1}}
+					{{pass}}
+				{{pass}}
 			</div>
 		</ul>
 		{{pass}}
 	{{pass}}
 </div>
-
-<script>
-	var urlStory = "{{=URL('create_story.json')}}",
-		urlUpdateStory = "{{=URL('update_story.json')}}",
-		botonDefinitionReady = '{{=T("DR")}}',
-		projectID = '{{=project.id}}';
-</script>
 
 
