--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -5,6 +5,7 @@
     var urlCreateUpdateBacklogItens = "{{=URL('create_update_backlog_itens.json')}}",
         urlRemoveBacklogItens = "{{=URL('remove_item_backlog_itens')}}",
         botonDefinitionReady = '{{=T("DR")}}',
+        botonTask = '{{=T("Task")}}',
         projectID = '{{=project.id}}',
         msg = {
             field_empty : '{{=T("Click to write")}}',
@@ -39,6 +40,87 @@
 <div id="target_ajax"></div>
 
 
+<button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
+<div id="stories">
+    {{if "stories" in globals():}}
+        {{for story in stories:}}
+        <ul class="stories_container item_container">
+            <li class="stories">
+                <div class="stories_header">
+                    <div class="text_container">
+                        <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="stories" data-update="true">{{=story.title}}</a>
+                    </div>
+                    <div class="buttons_container">
+                        <button class="btn expand_story pull-right" alt="Expand" title="Expand">
+                            <i class="icon-chevron-down"></i></button>
+                        <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                        <select class="span1 pull-right benefit" name="size" id="size">
+                        {{selects="P M G GG".split()}}
+                        {{if story.benefit:}}
+                            {{for size in selects:}}
+                                {{if size == story.benefit:}}
+                                    <option value="{{=size}}" selected>{{=size}}</option>
+                                {{else:}}
+                                    <option value="{{=size}}">{{=size}}</option>
+                                {{pass}}
+                            {{pass}}
+                        {{else:}}
+                            {{selects.insert(0,"?")}}
+                            {{for size in selects:}}
+                                {{if size == "?":}}
+                                    <option value="" disabled selected>?</option>
+                                {{else:}}
+                                    <option value="{{=size}}">{{=size}}</option>
+                                {{pass}}
+                            {{pass}}                    
+                        {{pass}}
+                        </select>
+                        <input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
+                        <button class="btn btn-primary create_definition_ready pull-right">{{=T('DR')}}</button>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <ul class="item_container">
+                {{count = 0}}
+                {{for df in definition_ready[story.id]:}}
+                    {{if definition_ready[story.id][count].story_id == story.id:}}
+                    <li class="definition_ready_container">
+                        <div class="definition_ready">
+                            <div class="text_container">
+                                <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                            </div>
+                            <div class="buttons_container">
+                                <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
+                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                <button class="btn create_task pull-right" alt="Create Task" title="Create Task">+ {{=T("Task")}}</button>
+                            </div>
+                        </div>
+                        {{for task in tasks[definition_ready[story.id][count].id]:}}
+                        <ul class="item_container">
+                            <li class="task">
+                                <div class="text_container">
+                                    <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                </div>
+                                <div class="buttons_container">
+                                    <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                    <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+                                </div>
+                            </li>
+                        </ul>
+                        {{pass}}
+
+                        {{count += 1}}
+                        {{pass}}
+                    {{pass}}
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        {{pass}}
+    {{pass}}
+    <!-- <div class="clearfix"></div> -->
+</div>
+
 {{if sprint:}}
 <div class="container-fluid row">
     <h2>{{=T('Sprint')}}</h2>
@@ -55,56 +137,3 @@
 {{pass}}
 <br>
 <br>
-
-<button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
-<div id="stories">
-    {{if "stories" in globals():}}
-        {{for story in stories:}}
-        <ul class="stories_container">
-            <div class="stories">
-                <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="stories" data-update="true">{{=story.title}}</a>
-                <button class="btn expand_story pull-right" alt="Expand" title="Expand">
-                    <i class="icon-chevron-down"></i></button>
-                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                <select class="span1 pull-right benefit" name="size" id="size">
-                {{selects="P M G GG".split()}}
-                {{if story.benefit:}}
-                    {{for size in selects:}}
-                        {{if size == story.benefit:}}
-                            <option value="{{=size}}" selected>{{=size}}</option>
-                        {{else:}}
-                            <option value="{{=size}}">{{=size}}</option>
-                        {{pass}}
-                    {{pass}}
-                {{else:}}
-                    {{selects.insert(0,"?")}}
-                    {{for size in selects:}}
-                        {{if size == "?":}}
-                            <option value="" disabled selected>?</option>
-                        {{else:}}
-                            <option value="{{=size}}">{{=size}}</option>
-                        {{pass}}
-                    {{pass}}                    
-                {{pass}}
-                </select>
-                <input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
-                <button class="btn btn-primary create_definition_ready pull-right">{{=T('DR')}}</button>
-            </div>
-            {{count = 0}}
-            {{for df in definition_ready[story.id]:}}
-                {{if definition_ready[story.id][count].story_id == story.id:}}
-                <li class="definition_ready">
-                    <a href="#" class="editable-click editable" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
-                    <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
-                    <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                    <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
-                    <button class="btn plus_card pull-right" alt="Create Card" title="Create Card"><i class="icon-plus-sign"></i></button>
-                </li>
-                {{count += 1}}
-                {{pass}}
-            {{pass}}
-        </ul>
-        {{pass}}
-    {{pass}}
-    <div class="clearfix"></div>
-</div>
