fix remove itens

--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -48,7 +48,7 @@
             <li class="stories">
                 <div class="stories_header">
                     <div class="text_container">
-                        <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="stories" data-update="true">{{=story.title}}</a>
+                        <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                     </div>
                     <div class="buttons_container">
                         <button class="btn expand_story pull-right" alt="Expand" title="Expand">
