--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -76,7 +76,7 @@
                         {{pass}}
                         </select>
                         <input class="span1 pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
-                        <button class="btn btn-primary create_definition_ready pull-right">{{=T('DR')}}</button>
+                        <button class="btn create_definition_ready pull-right">+ {{=T('DR')}}</button>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         {{for task in tasks[definition_ready[story.id][count].id]:}}
-                        <ul class="item_container">
+                        <ul class="item_container zebra_row">
                             <li class="task">
                                 <div class="text_container">
                                     <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
