--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -18,124 +18,134 @@
         };
 </script>
 
-<div class="row-fluid">
-    <div class="span7">
-        <h2>{{=T("Project")}}</h2>
-        <table class="table table-hover" data-provides="rowlink">
-            <thead>
+<div id="breadcrumb">
+    <a href='{{=URL("index")}}' title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
+    <a href='{{=URL("projects")}}' title="Go to Home" class="tip-bottom"><i class="icon icon-th"></i> {{=T('Projects')}}</a>
+    <a href="#" class="current">{{=T('Product Backlog')}}</a>
+</div>
+<div id="content-header">
+    <h1>{{=T('Product Backlog')}}</h1>
+</div>
+
+<div id="target_ajax"></div>
+
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span7">
+            <h2>{{=T("Project")}}</h2>
+            <table class="table table-hover" data-provides="rowlink">
+                <thead>
+                    <tr>
+                        <th><strong>{{=T('Name')}}</strong></th>
+                        <th><strong>{{=T('Description')}}</strong></th>
+                        <th><strong>{{=T('Data')}}</strong></th>
+                    </tr>
+                </thead>
+                <tbody>
                 <tr>
-                    <th><strong>{{=T('Name')}}</strong></th>
-                    <th><strong>{{=T('Description')}}</strong></th>
-                    <th><strong>{{=T('Data')}}</strong></th>
-                </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>{{=project.name}}</td>
-                <td>{{=project.description}}</td>
-                <td>{{=project.date_.strftime("%d/%m/%Y")}}</td>
-            </tr>   
-            </tbody>
-        </table>
+                    <td>{{=project.name}}</td>
+                    <td>{{=project.description}}</td>
+                    <td>{{=project.date_.strftime("%d/%m/%Y")}}</td>
+                </tr>   
+                </tbody>
+            </table>
 
-        <div id="target_ajax"></div>
-
-
-        <button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
-        <div id="stories">
-            {{if "stories" in globals():}}
-                {{for story in stories:}}
-                <ul class="stories_container item_container">
-                    <li class="stories">
-                        <div class="stories_header">
-                            <div class="text_container">
-                                <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
-                            </div>
-                            <div class="buttons_container">
-                                <button class="btn expand_story pull-right" alt="Expand" title="Expand">
-                                    <i class="icon-chevron-down"></i></button>
-                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                <select class="pull-right benefit" name="size" id="size">
-                                {{selects="P M G GG".split()}}
-                                {{if story.benefit:}}
-                                    {{for size in selects:}}
-                                        {{if size == story.benefit:}}
-                                            <option value="{{=size}}" selected>{{=size}}</option>
-                                        {{else:}}
-                                            <option value="{{=size}}">{{=size}}</option>
-                                        {{pass}}
-                                    {{pass}}
-                                {{else:}}
-                                    {{selects.insert(0,"?")}}
-                                    {{for size in selects:}}
-                                        {{if size == "?":}}
-                                            <option value="" disabled selected>?</option>
-                                        {{else:}}
-                                            <option value="{{=size}}">{{=size}}</option>
-                                        {{pass}}
-                                    {{pass}}                    
-                                {{pass}}
-                                </select>
-                                <input class="pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
-                                <button class="btn create_definition_ready pull-right">+ {{=T('DR')}}</button>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <ul class="item_container">
-                        {{count = 0}}
-                        {{for df in definition_ready[story.id]:}}
-                            {{if definition_ready[story.id][count].story_id == story.id:}}
-                            <li class="definition_ready_container">
-                                <div class="definition_ready">
-                                    <div class="text_container">
-                                        <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
-                                    </div>
-                                    <div class="buttons_container">
-                                        <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
-                                        <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                        <button class="btn create_task pull-right" alt="Create Task" title="Create Task">+ {{=T("Task")}}</button>
-                                    </div>
+            <button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
+            <div id="stories">
+                {{if "stories" in globals():}}
+                    {{for story in stories:}}
+                    <ul class="story_container item_container">
+                        <li class="story">
+                            <div class="story_header">
+                                <div class="text_container">
+                                    <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                                 </div>
-                                {{for task in tasks[definition_ready[story.id][count].id]:}}
-                                <ul class="item_container zebra_row">
-                                    <li class="task">
-                                        <div class="text_container">
-                                            <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
-                                        </div>
-                                        <div class="buttons_container">
-                                            <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                            <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
-                                        </div>
-                                    </li>
-                                </ul>
-                                {{pass}}
-
-                                {{count += 1}}
+                                <div class="buttons_container">
+                                    <button class="btn expand_story pull-right" alt="Expand" title="Expand">
+                                        <i class="icon-chevron-down"></i></button>
+                                    <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                    <select class="pull-right benefit" name="size" id="size">
+                                    {{selects="P M G GG".split()}}
+                                    {{if story.benefit:}}
+                                        {{for size in selects:}}
+                                            {{if size == story.benefit:}}
+                                                <option value="{{=size}}" selected>{{=size}}</option>
+                                            {{else:}}
+                                                <option value="{{=size}}">{{=size}}</option>
+                                            {{pass}}
+                                        {{pass}}
+                                    {{else:}}
+                                        {{selects.insert(0,"?")}}
+                                        {{for size in selects:}}
+                                            {{if size == "?":}}
+                                                <option value="" disabled selected>?</option>
+                                            {{else:}}
+                                                <option value="{{=size}}">{{=size}}</option>
+                                            {{pass}}
+                                        {{pass}}                    
+                                    {{pass}}
+                                    </select>
+                                    <input class="pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
+                                    <button class="btn create_definition_ready pull-right">+ {{=T('DR')}}</button>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            {{count = 0}}
+                            {{for df in definition_ready[story.id]:}}
+                                {{if definition_ready[story.id][count].story_id == story.id:}}
+                                <ul class="item_container">
+                                    <li class="definition_ready_container">
+                                        <div class="definition_ready">
+                                            <div class="text_container">
+                                                <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                            </div>
+                                            <div class="buttons_container">
+                                                <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
+                                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                                <button class="btn create_task pull-right" alt="Create Task" title="Create Task">+ {{=T("Task")}}</button>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div><!-- definition_ready -->
+                                        {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                            <ul class="item_container zebra_row">
+                                                <li class="task">
+                                                    <div class="text_container">
+                                                        <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                    </div>
+                                                    <div class="buttons_container">
+                                                        <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                                        <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                </li><!-- task -->
+                                            </ul>
+                                        {{pass}}
+                                        </li>
+                                    </ul>
+                                    {{count += 1}}
                                 {{pass}}
                             {{pass}}
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                        </li><!-- story -->
+                    </ul>
+                    {{pass}}
                 {{pass}}
-            {{pass}}
-            <!-- <div class="clearfix"></div> -->
-        </div>
-    </div>
-    <div class="span5">
-        {{if sprint:}}
-        <div class="container-fluid row">
-            <h2>{{=T('Sprint')}}</h2>
-            {{=sprint.name}}
-            {{if not sprint.started:}}
-            <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-success'>{{=T('Launch the sprint')}}</a>
+            </div><!-- stories -->
+        </div><!-- span7 -->
+        <div class="span5">
+            {{if sprint:}}
+            <div class="container-fluid row">
+                <h2>{{=T('Sprint')}}</h2>
+                {{=sprint.name}}
+                {{if not sprint.started:}}
+                <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-success'>{{=T('Launch the sprint')}}</a>
+                {{else:}}
+                <button class='disabled btn btn-success'>{{=T('Launched')}}</button>
+                {{pass}}
+            </div>
             {{else:}}
-            <button class='disabled btn btn-success'>{{=T('Launched')}}</button>
+                <h2>{{=T('Create Sprint')}}</h2>
+                {{=form_sprint}}
             {{pass}}
-        </div>
-        {{else:}}
-            <h2>{{=T('Create Sprint')}}</h2>
-            {{=form_sprint}}
-        {{pass}}
-    </div>
-</div>
+        </div><!-- span5 -->
+    </div><!-- row-fluid -->
+</div><!-- container-fluid -->
