--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -19,8 +19,8 @@
 </script>
 
 <div id="breadcrumb">
-    <a href='{{=URL("index")}}' title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-    <a href='{{=URL("projects")}}' title="Go to Home" class="tip-bottom"><i class="icon icon-th"></i> {{=T('Projects')}}</a>
+    <a href='{{=URL("index")}}' title="{{=T('Go to Home')}}" class="tip-bottom"><i class="icon-home"></i> Home</a>
+    <a href='{{=URL("projects")}}' title="{{=T('Go to Projects')}}" class="tip-bottom"><i class="icon icon-th"></i> {{=T('Projects')}}</a>
     <a href="#" class="current">{{=T('Product Backlog')}}</a>
 </div>
 <div id="content-header">
