--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -5,9 +5,22 @@
     <a href="#" class="current">{{=T('Projects')}}</a>
 </div>
 <div id="content-header">
-    <h1>{{=T('Projects')}}</h1>
+    <h1>{{=T('Create a Project')}}</h1>
 </div>
 <div class="container-fluid">
-    <h1>{{=T('Create a Project')}}</h1>
-    {{=form}}
+    <div class="span4">
+    {{=form.custom.begin}}
+        <!-- name -->
+        {{ form.elements('#projects_name')[0] ['_placeholder'] = T('Name') }}
+        {{=form.custom.widget.name}}
+        <!-- description -->
+        {{ form.elements('#projects_description')[0] ['_placeholder'] = T('Description') }}
+        {{=form.custom.widget.description}}
+        <!-- url -->
+        {{ form.elements('#projects_url')[0] ['_placeholder'] = T('Url') }}
+        {{=form.custom.widget.url}}
+        <br>
+        <button type="submit" class="btn btn-primary">{{=T('Create Project')}}</button>
+    {{=form.custom.end}}
+    </div>
 </div>
