--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -5,6 +5,7 @@
     var urlCreateUpdateBacklogItens = "{{=URL('create_update_backlog_itens.json')}}",
         urlRemoveBacklogItens = "{{=URL('remove_item_backlog_itens')}}",
         botonDefinitionReady = '{{=T("DR")}}',
+        botonSendSprint = '{{=T("Send to Sprint")}}',
         botonTask = '{{=T("Task")}}',
         projectID = '{{=project.id}}',
         msg = {
@@ -24,114 +25,147 @@
     <a href="#" class="current">{{=T('Product Backlog')}}</a>
 </div>
 <div id="content-header">
-    <h1>{{=T('Product Backlog')}}</h1>
+    <h1>{{=project.name}} - {{=project.date_.strftime("%d/%m/%Y")}}</h1>
 </div>
 
 <div id="target_ajax"></div>
 
+<div class="row-fluid">
+    <div class="span6 offset1">
+        <h5>{{=project.description}} <a href="{{=project.url}}" target="_blank">{{=project.url}}</a></h5>
+        
+        <br>
+        <button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
+    </div>
+    <div class="span5">
+        {{if sprint:}}
+            <h4>{{=T('Current Sprint')}} - {{=sprint.name}}
+            {{if not sprint.started:}}
+            <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-success'>{{=T('Launch the sprint')}}</a>
+            <hr>
+            <h4>{{=sprint.weeks}} semanas</h4>
+            {{else:}}
+            <button class='disabled btn btn-success'>{{=T('Launched')}}</button>
+            {{pass}}
+            </h4>
+        {{pass}}
+    </div>
+</div>
+            
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span7">
-            <h3>{{=T("Name")}}: {{=project.name}}</h3>
-            <h4>{{=T("Date")}}: {{=project.date_.strftime("%d/%m/%Y")}}</h4>
-            <h6>{{=T("Description")}}: {{=project.description}}</h6>
-            <h6>{{=T("URL")}}: <a href="{{=project.url}}" target="_blank">{{=project.url}}</a></h6>
-
-            <button id="create_story" class="btn btn-primary">{{=T('Create Story')}}</button>
-            <div id="stories">
-                {{if "stories" in globals():}}
-                    {{for story in stories:}}
-                    <ul class="story_container item_container">
-                        <li class="story">
-                            <div class="story_header">
-                                <div class="text_container">
-                                    <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
-                                </div>
-                                <div class="buttons_container">
-                                    <button class="btn expand_story pull-right" alt="Expand" title="Expand">
-                                        <i class="icon-chevron-down"></i></button>
-                                    <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                    <select class="pull-right benefit" name="size" id="size">
-                                    {{selects="P M G GG".split()}}
-                                    {{if story.benefit:}}
-                                        {{for size in selects:}}
-                                            {{if size == story.benefit:}}
-                                                <option value="{{=size}}" selected>{{=size}}</option>
-                                            {{else:}}
-                                                <option value="{{=size}}">{{=size}}</option>
+             
+            <div class="window">
+                <div id="stories" class="content">
+                    {{if "stories" in globals():}}
+                        {{for story in stories:}}
+                        <ul class="story_container item_container">
+                            <li class="story">
+                                <div class="story_header">
+                                    <div class="text_container">
+                                        <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
+                                    </div>
+                                    <div class="buttons_container">
+                                        <button class="btn expand_story pull-right" alt="Expand" title="Expand">
+                                            <i class="icon-chevron-down"></i></button>
+                                        <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                        <select class="pull-right benefit" name="size" id="size">
+                                        {{selects="P M G GG".split()}}
+                                        {{if story.benefit:}}
+                                            {{for size in selects:}}
+                                                {{if size == story.benefit:}}
+                                                    <option value="{{=size}}" selected>{{=size}}</option>
+                                                {{else:}}
+                                                    <option value="{{=size}}">{{=size}}</option>
+                                                {{pass}}
                                             {{pass}}
+                                        {{else:}}
+                                            {{selects.insert(0,"?")}}
+                                            {{for size in selects:}}
+                                                {{if size == "?":}}
+                                                    <option value="" disabled selected>?</option>
+                                                {{else:}}
+                                                    <option value="{{=size}}">{{=size}}</option>
+                                                {{pass}}
+                                            {{pass}}                    
                                         {{pass}}
-                                    {{else:}}
-                                        {{selects.insert(0,"?")}}
-                                        {{for size in selects:}}
-                                            {{if size == "?":}}
-                                                <option value="" disabled selected>?</option>
-                                            {{else:}}
-                                                <option value="{{=size}}">{{=size}}</option>
-                                            {{pass}}
-                                        {{pass}}                    
-                                    {{pass}}
-                                    </select>
-                                    <input class="pull-right story_points" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
-                                    <button class="btn create_definition_ready pull-right">+ {{=T('DR')}}</button>
+                                        </select>
+                                        <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value="{{=story.story_points}}">
+                                        <button class="btn create_definition_ready pull-right">+ {{=T('DR')}}</button>
+                                    </div>
+                                    <div class="clearfix"></div>
                                 </div>
+                                {{count = 0}}
+                                {{for df in definition_ready[story.id]:}}
+                                    {{if definition_ready[story.id][count].story_id == story.id:}}
+                                    <ul class="item_container">
+                                        <li class="definition_ready_container">
+                                            <div class="definition_ready">
+                                                <div class="text_container">
+                                                    <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                                </div>
+                                                <div class="buttons_container">
+                                                    <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
+                                                    <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                                    <button class="btn create_task pull-right" alt="Create Task" title="Create Task">+ {{=T("Task")}}</button>
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </div><!-- definition_ready -->
+                                            {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                                <ul class="item_container zebra_row">
+                                                    <li class="task">
+                                                        <div class="text_container">
+                                                            <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                        </div>
+                                                        <div class="buttons_container">
+                                                            <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
+                                                            <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+                                                        </div>
+                                                        <div class="clearfix"></div>
+                                                    </li><!-- task -->
+                                                </ul>
+                                            {{pass}}
+                                            </li>
+                                        </ul>
+                                        {{count += 1}}
+                                    {{pass}}
+                                {{pass}}
+                            </li><!-- story -->
+                            <div class="buttons_footer">
+                                <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
                                 <div class="clearfix"></div>
                             </div>
-                            {{count = 0}}
-                            {{for df in definition_ready[story.id]:}}
-                                {{if definition_ready[story.id][count].story_id == story.id:}}
-                                <ul class="item_container">
-                                    <li class="definition_ready_container">
-                                        <div class="definition_ready">
-                                            <div class="text_container">
-                                                <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
-                                            </div>
-                                            <div class="buttons_container">
-                                                <button class="btn expand_definition_ready pull-right" alt="Expand" title="Expand"><i class="icon-chevron-down"></i></button>
-                                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                                <button class="btn create_task pull-right" alt="Create Task" title="Create Task">+ {{=T("Task")}}</button>
-                                            </div>
-                                            <div class="clearfix"></div>
-                                        </div><!-- definition_ready -->
-                                        {{for task in tasks[definition_ready[story.id][count].id]:}}
-                                            <ul class="item_container zebra_row">
-                                                <li class="task">
-                                                    <div class="text_container">
-                                                        <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
-                                                    </div>
-                                                    <div class="buttons_container">
-                                                        <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                                        <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
-                                                    </div>
-                                                    <div class="clearfix"></div>
-                                                </li><!-- task -->
-                                            </ul>
-                                        {{pass}}
-                                        </li>
-                                    </ul>
-                                    {{count += 1}}
-                                {{pass}}
-                            {{pass}}
-                        </li><!-- story -->
-                    </ul>
+                        </ul>
+                        {{pass}}
                     {{pass}}
-                {{pass}}
-            </div><!-- stories -->
+                </div><!-- stories -->
+            </div>
         </div><!-- span7 -->
         <div class="span5">
             {{if sprint:}}
-            <div class="container-fluid row">
-                <h2>{{=T('Sprint')}}</h2>
-                {{=sprint.name}}
-                {{if not sprint.started:}}
-                <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-success'>{{=T('Launch the sprint')}}</a>
-                {{else:}}
-                <button class='disabled btn btn-success'>{{=T('Launched')}}</button>
-                {{pass}}
-            </div>
+            
+            <div class="window">
+                <div class="stories_sprint content">
+                    
+                    <!-- put stories here -->
+                    
+                </div><!-- content -->
+            </div><!-- window -->
             {{else:}}
-                <h2>{{=T('Create Sprint')}}</h2>
-                {{=form_sprint}}
+                <h2>{{=T('New Sprint')}}</h2>
+                {{=form_sprint.custom.begin}}
+                    <!-- name -->
+                    {{ form_sprint.elements('#sprint_name')[0] ['_placeholder'] = T('Name') }}
+                    {{=form_sprint.custom.widget.name}}
+                    <br>
+                    <!-- weeks -->
+                    {{ form_sprint.elements('#sprint_weeks')[0] ['_placeholder'] = T('Weeks') }}
+                    {{ form_sprint.elements('#sprint_weeks')[0] ['_class'] = "only_numbers" }}
+                    {{=form_sprint.custom.widget.weeks}}
+                    <br>
+                    <button type="submit" class="btn btn-primary">{{=T('Create Sprint')}}</button>
+                {{=form_sprint.custom.end}}
             {{pass}}
         </div><!-- span5 -->
     </div><!-- row-fluid -->
